Update course links and titles in index.html

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
 </head>
 
 <body>
-  <!-- Similar “skip link” behavior -->
-  <a class="skip-link" href="#main-content">Skip to main content</a>
-
   <!-- Keep structure simple; PreTeXt CSS will handle typography/layout -->
   <div class="pretext-book">
     <header class="ptx-page-title" style="padding: 1.25rem 1rem 0;">
       <h1 class="heading">
-        <span class="title">CSUDH Mathematics Texts</span>
+        <span class="title">CSUDH STEM Pathway Workbooks</span>
       </h1>
       <p class="course-note">
-        Select a course to open the online text.
+        Select a course to open the online workbook.
       </p>
     </header>
 
@@ -44,7 +41,7 @@
         <ul class="course-list">
           <!-- Update hrefs if your published filenames differ -->
           <li>
-            <a href="precalc103.html">MAT 103 — Introduction to College Algebra</a>
+            <a href="https://slanaghan.github.io/precalc103-site/">MAT 103 — Introduction to College Algebra</a>
           </li>
           <li>
             <a href="mat151.html">MAT 151 — College Algebra with Trigonometry</a>
