--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>CSUDH Mathematics Texts</title>
+  <title>CSUDH Mathematics Workbooks</title>
 
   <!-- Match the PreTeXt/Runestone look by using the same CSS links -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
