Update course links to point to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -44,16 +44,12 @@
             <a href="https://slanaghan.github.io/precalc103-site/">MAT 103 — Introduction to College Algebra</a>
           </li>
           <li>
-            <a href="mat151.html">MAT 151 — College Algebra with Trigonometry</a>
+            <a href="https://slanaghan.github.io/precalc151-site/">MAT 151 — College Algebra with Trigonometry</a>
           </li>
           <li>
-            <a href="mat153.html">MAT 153 — Pre-Calculus with Trigonometry</a>
+            <a href="https://slanaghan.github.io/precalc153-site/">MAT 153 — Pre-Calculus with Trigonometry</a>
           </li>
         </ul>
-
-        <p class="course-note" style="margin-top: 1.25rem;">
-          If MAT 151/153 live on a different GitHub Pages site, replace the links with full URLs.
-        </p>
       </section>
     </main>
   </div>
