Enhance layout and accessibility of index.html
Refactor HTML structure and styles for improved layout and accessibility.

--- a/index.html
+++ b/index.html
@@ -12,53 +12,202 @@
   <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-  <!-- These are the same stylesheet paths used by your PreTeXt site -->
+  <!-- Same stylesheet paths used by your PreTeXt site -->
   <link href="_static/pretext/css/theme.css" rel="stylesheet" type="text/css" />
   <link href="_static/pretext/css/pretext.css" rel="stylesheet" type="text/css" />
 
   <style>
-    /* Tiny helper styles so the wrapper reads nicely without fighting the theme */
-    .course-list { margin-top: 1.25rem; }
-    .course-list li { margin: 0.6rem 0; }
-    .course-note { opacity: 0.85; }
+    /* Hub-page layout enhancements that play nicely with PreTeXt CSS */
+
+    .hub-wrap{
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 1.25rem 1rem 2.5rem;
+    }
+
+    .hub-intro{
+      max-width: 70ch;
+      opacity: 0.9;
+      margin-top: 0.5rem;
+    }
+
+    .course-grid{
+      display: grid;
+      grid-template-columns: repeat(12, 1fr);
+      gap: 1rem;
+      margin: 1.25rem 0 1.75rem;
+      padding: 0;
+      list-style: none;
+    }
+
+    .course-card{
+      grid-column: span 12;
+      border: 1px solid rgba(0,0,0,0.12);
+      border-radius: 14px;
+      background: rgba(255,255,255,0.65);
+      box-shadow: 0 1px 2px rgba(0,0,0,.04), 0 10px 26px rgba(0,0,0,.06);
+      padding: 1rem 1.1rem;
+    }
+
+    @media (min-width: 760px){
+      .course-card{ grid-column: span 6; }
+    }
+
+    @media (min-width: 1020px){
+      .course-card{ grid-column: span 4; }
+    }
+
+    .course-card h2{
+      margin: 0 0 0.35rem;
+      font-size: 1.15rem;
+    }
+
+    .course-card p{
+      margin: 0 0 0.9rem;
+      opacity: 0.9;
+      max-width: 60ch;
+    }
+
+    .course-actions{
+      display: flex;
+      flex-wrap: wrap;
+      gap: 0.6rem;
+      align-items: center;
+    }
+
+    /* “Button-like” primary link */
+    .btn{
+      display: inline-flex;
+      align-items: center;
+      gap: 0.35rem;
+      padding: 0.52rem 0.85rem;
+      border-radius: 999px;
+      border: 1px solid rgba(0,0,0,0.15);
+      text-decoration: none;
+      font-weight: 600;
+      line-height: 1.2;
+      background: rgba(255,255,255,0.9);
+    }
+
+    .btn:hover{ text-decoration: none; }
+
+    .btn-primary{
+      background: rgba(29,78,216,0.10);
+      border-color: rgba(29,78,216,0.35);
+    }
+
+    .btn-primary:focus,
+    .btn:focus{
+      outline: 3px solid rgba(29,78,216,0.35);
+      outline-offset: 2px;
+    }
+
+    .btn .material-symbols-outlined{
+      font-size: 20px;
+      line-height: 1;
+    }
+
+    .small-link{
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    .small-link:hover{ text-decoration: underline; }
+
+    /* Disclaimer as a quiet “info panel” */
+    .disclaimer{
+      border: 1px solid rgba(0,0,0,0.12);
+      border-radius: 14px;
+      background: rgba(0,0,0,0.03);
+      padding: 1rem 1.1rem;
+      margin-top: 1.5rem;
+    }
+
+    .disclaimer h2{
+      margin-top: 0;
+      font-size: 1.05rem;
+    }
+
+    .disclaimer p{
+      margin: 0.65rem 0;
+      max-width: 90ch;
+    }
   </style>
 </head>
 
 <body>
-  <!-- Keep structure simple; PreTeXt CSS will handle typography/layout -->
   <div class="pretext-book">
-    <header class="ptx-page-title" style="padding: 1.25rem 1rem 0;">
-      <h1 class="heading">
-        <span class="title">CSUDH STEM Pathway Workbooks</span>
-      </h1>
-      <p class="course-note">
-        Select a course to open the online workbook.
-      </p>
+    <header class="ptx-page-title">
+      <div class="hub-wrap">
+        <h1 class="heading">
+          <span class="title">CSUDH STEM Pathway Workbooks</span>
+        </h1>
+
+        <p class="hub-intro">
+          Select a course to open the online workbook. Each workbook is designed for web viewing and can be used on a computer,
+          tablet, or phone.
+        </p>
+      </div>
     </header>
 
-    <main id="main-content" class="ptx-main" style="padding: 0 1rem 2rem;">
-      <section class="ptx-content">
-        <ul class="course-list">
-          <!-- Update hrefs if your published filenames differ -->
-          <li>
-            <a href="https://slanaghan.github.io/precalc103-site/">MAT 103 — Introduction to College Algebra</a>
-          </li>
-          <li>
-            <a href="https://slanaghan.github.io/precalc151-site/">MAT 151 — College Algebra with Trigonometry</a>
-          </li>
-          <li>
-            <a href="https://slanaghan.github.io/precalc153-site/">MAT 153 — Pre-Calculus with Trigonometry</a>
-          </li>
-        </ul>
-      </section>
-      <section aria-labelledby="disclaimer-heading" class="disclaimer">
+    <main id="main-content" class="ptx-main">
+      <div class="hub-wrap">
+        <section class="ptx-content" aria-labelledby="courses-heading">
+          <h2 id="courses-heading">Workbooks</h2>
+
+          <ul class="course-grid">
+            <li class="course-card">
+              <h2>MAT 103 — Introduction to College Algebra</h2>
+              <p>Functions, modeling, and algebraic tools for STEM pathway students.</p>
+              <div class="course-actions">
+                <a class="btn btn-primary" href="https://slanaghan.github.io/precalc103-site/">
+                  <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+                  Open workbook
+                </a>
+                <a class="small-link" href="https://slanaghan.github.io/precalc103-site/" aria-label="Open MAT 103 workbook in a new tab">
+                  Direct link
+                </a>
+              </div>
+            </li>
+
+            <li class="course-card">
+              <h2>MAT 151 — College Algebra with Trigonometry</h2>
+              <p>Algebra and trigonometry foundations for precalculus and calculus.</p>
+              <div class="course-actions">
+                <a class="btn btn-primary" href="https://slanaghan.github.io/precalc151-site/">
+                  <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+                  Open workbook
+                </a>
+                <a class="small-link" href="https://slanaghan.github.io/precalc151-site/" aria-label="Open MAT 151 workbook in a new tab">
+                  Direct link
+                </a>
+              </div>
+            </li>
+
+            <li class="course-card">
+              <h2>MAT 153 — Pre-Calculus with Trigonometry</h2>
+              <p>Advanced function analysis, trigonometry, and preparation for calculus.</p>
+              <div class="course-actions">
+                <a class="btn btn-primary" href="https://slanaghan.github.io/precalc153-site/">
+                  <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
+                  Open workbook
+                </a>
+                <a class="small-link" href="https://slanaghan.github.io/precalc153-site/" aria-label="Open MAT 153 workbook in a new tab">
+                  Direct link
+                </a>
+              </div>
+            </li>
+          </ul>
+        </section>
+
+        <section aria-labelledby="disclaimer-heading" class="disclaimer">
           <h2 id="disclaimer-heading">Accessibility and Accuracy Disclaimer</h2>
-        
+
           <p>
             As of December 2025, the authors have made a good-faith effort to ensure that these materials are accurate and accessible.
             The materials are provided <em>as is</em> and remain a work in progress; updates and revisions may be made without prior notice.
           </p>
-        
+
           <p>
             The authors welcome feedback regarding accuracy and accessibility, including issues related to screen reader compatibility
             and other assistive technologies. Individuals who identify errors, accessibility concerns, or opportunities for improvement
@@ -67,6 +216,7 @@
             <a href="mailto:mjones@csudh.edu">mjones@csudh.edu</a>.
           </p>
         </section>
+      </div>
     </main>
   </div>
 </body>
