Remove unnecessary line breaks in index.html

--- a/index.html
+++ b/index.html
@@ -142,10 +142,8 @@
         <h1 class="heading">
           <span class="title">CSUDH STEM Pathway Workbooks</span>
         </h1>
-
         <p class="hub-intro">
-          Select a course to open the online workbook. Each workbook is designed for web viewing and can be used on a computer,
-          tablet, or phone.
+          Select a course to open the online workbook. Each workbook is designed for web viewing and can be used on a computer, tablet, or phone.
         </p>
       </div>
     </header>
@@ -209,9 +207,7 @@
           </p>
 
           <p>
-            The authors welcome feedback regarding accuracy and accessibility, including issues related to screen reader compatibility
-            and other assistive technologies. Individuals who identify errors, accessibility concerns, or opportunities for improvement
-            are encouraged to contact
+            The authors welcome feedback regarding accuracy and accessibility, including issues related to screen reader compatibility and other assistive technologies. Individuals who identify errors, accessibility concerns, or opportunities for improvementare encouraged to contact
             <a href="mailto:slanaghan@csudh.edu">slanaghan@csudh.edu</a> or
             <a href="mailto:mjones@csudh.edu">mjones@csudh.edu</a>.
           </p>
