Consolidate disclaimer text for clarity

--- a/index.html
+++ b/index.html
@@ -200,16 +200,11 @@
 
         <section aria-labelledby="disclaimer-heading" class="disclaimer">
           <h2 id="disclaimer-heading">Accessibility and Accuracy Disclaimer</h2>
-
           <p>
-            As of December 2025, the authors have made a good-faith effort to ensure that these materials are accurate and accessible.
-            The materials are provided <em>as is</em> and remain a work in progress; updates and revisions may be made without prior notice.
+            As of December 2025, the authors have made a good-faith effort to ensure that these materials are accurate and accessible. The materials are provided <em>as is</em> and remain a work in progress; updates and revisions may be made without prior notice.
           </p>
-
           <p>
-            The authors welcome feedback regarding accuracy and accessibility, including issues related to screen reader compatibility and other assistive technologies. Individuals who identify errors, accessibility concerns, or opportunities for improvementare encouraged to contact
-            <a href="mailto:slanaghan@csudh.edu">slanaghan@csudh.edu</a> or
-            <a href="mailto:mjones@csudh.edu">mjones@csudh.edu</a>.
+            The authors welcome feedback regarding accuracy and accessibility, including issues related to screen reader compatibility and other assistive technologies. Individuals who identify errors, accessibility concerns, or opportunities for improvement are encouraged to contact <a href="mailto:slanaghan@csudh.edu">slanaghan@csudh.edu</a> or <a href="mailto:mjones@csudh.edu">mjones@csudh.edu</a>.
           </p>
         </section>
       </div>
