Revise course descriptions in index.html
Updated course descriptions for clarity and consistency.

--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
 
     .disclaimer p{
       margin: 0.65rem 0;
-      max-width: 90ch;
     }
   </style>
 </head>
@@ -154,7 +153,7 @@
           <ul class="course-grid">
             <li class="course-card">
               <h2>MAT 103 — Introduction to College Algebra</h2>
-              <p>Functions, modeling, and algebraic tools for STEM pathway students.</p>
+              <p>Functions, modeling, and algebraic tools for STEM students.</p>
               <div class="course-actions">
                 <a class="btn btn-primary" href="https://slanaghan.github.io/precalc103-site/">
                   <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
@@ -168,7 +167,7 @@
 
             <li class="course-card">
               <h2>MAT 151 — College Algebra with Trigonometry</h2>
-              <p>Algebra and trigonometry foundations for precalculus and calculus.</p>
+              <p>Algebra and trigonometry foundations for Calculus.</p>
               <div class="course-actions">
                 <a class="btn btn-primary" href="https://slanaghan.github.io/precalc151-site/">
                   <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
@@ -182,7 +181,7 @@
 
             <li class="course-card">
               <h2>MAT 153 — Pre-Calculus with Trigonometry</h2>
-              <p>Advanced function analysis, trigonometry, and preparation for calculus.</p>
+              <p> Functions and trigonometry in preparation for Calculus.</p>
               <div class="course-actions">
                 <a class="btn btn-primary" href="https://slanaghan.github.io/precalc153-site/">
                   <span class="material-symbols-outlined" aria-hidden="true">open_in_new</span>
